The header title word-wrap issue fixed.

--- a/src/main/resources/org/group/project/css/login-view.css
+++ b/src/main/resources/org/group/project/css/login-view.css
@@ -2,7 +2,7 @@
     -fx-font-size: 45;
     -fx-text-fill: rgb(0, 105, 255);
     -fx-font-weight: bold;
-    -fx-max-width:400;
+    -fx-max-width:500;
 }
 
 .label.welcome-subheader-label {
